syntax = "proto3";
package pb;

service JWT {
    rpc GenerateToken(GenerateTokenRequest) returns (GenerateTokenResponse){
    }
}

message GenerateTokenRequest {
    string Email = 1;
    string Role = 2;
}

message GenerateTokenResponse {
    string Token = 1;
    string Err = 2;
}